--- a/public/dummy.html
+++ b/public/dummy.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Static page</title>
 </head>
 <body>
-    <p>TADA!!...</p>
+    <p>Express allows us use static folder and this is one example for that.</p>
 </body>
 </html>
